<resources>
    <string name="app_name">Nexain</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="home_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum
    </string>
    <string name="kotlincodescanner">KotlinCodeScanner</string>
    <string name="contentOfScan">Result of the QR-Code scan</string>
    <string name="textview">TextView</string>
    <string name="kotlinBarCode" />
    <string name="contentDescription">picture of the product</string>
    <string name="nextFragment">next Fragment Navigation</string>
    <string name="productname">Produktname</string>
    <string name="backToHomeScreen" />
    <string name="Search">Search</string>
    <string name="title_activity_rounded_corner_tool_bar">RoundedCornerToolBar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Settings_Fragment">Settings Fragment</string>
    <string name="scan_product_text_label">Scan Product</string>
    <string name="button_for_popup">Button for Popup</string>
    <string name="content_description_media">test picture for media</string>
    <string name="welcome_home_message">Welcome Home! 👋</string>
    <string name="stepsOnDay">Schritte: </string>
    <string name="currentDisplayedDay">Displayed day</string>
    <string name="home">Home</string>
    <string name="library">Library</string>
    <string name="nutrition">Ernährung</string>
    <string name="trainings">Trainings</string>
    <string name="logout">Logout</string>
    <string name="verficationMessage">Your email is not verified.</string>
    <string name="verifynow">Verify now!</string>
    <string name="profilepicture">Profile picture</string>
    <string name="emailadress">Your Email Address</string>
    <string name="fullname">Your Full Name</string>
    <string name="scanning_prodcuts_for_info">Scanning Prodcuts for info</string>
</resources>