<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.betternutritions.HomeFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/navigateToSecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/navigateToSettingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>

    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.betternutritions.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/navigateToFirstFragment"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.betternutritions.SettingsFragments"
        android:label="@string/Settings_Fragment"
        tools:layout="@layout/fragment_settings">

    </fragment>
</navigation>